[package]
name = "wavefunction_collapse"
version = "0.1.0"
edition = "2021"
description = "An implementation of the waveguide function collapse algorithm in Rust."
license = "MIT OR Apache-2.0"
repository = "https://github.com/DomenicoDErasmo/wavefunction_collapse"
readme = "README.md"
keywords = ["wavefunction", "collapse", "algorithm"]
categories = ["algorithms"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imgproc-rs = "0.3.0"
rand = "0.8.5"
strum = "0.25.0"
strum_macros = "0.25.3"